<resources>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="skip">跳过</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="account">账号</string>
    <string name="account_hint">请输入账号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="mobile">手机号</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="checkCode">验证码</string>
    <string name="checkCode_hint">请输入验证码</string>
    <string name="checkCode_request">获取验证码</string>

    <string name="header">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="constellation">星座</string>
    <string name="intro">个人简介</string>
    <string name="nickname">昵称</string>

    <string name="update_app">新版本更新</string>
    <string name="update">立即更新</string>
    <string name="press_again_to_exit">再按一次退出程序</string>

    <string name="loading">加载中...</string>
    <string name="no_data">暂无数据</string>
    <string name="net_error">网络服务异常</string>

    <string name="refreshview_header_hint_normal">下拉刷新</string>
    <string name="refreshview_header_hint_ready">释放立即刷新</string>
    <string name="refreshview_header_hint_refreshing">正在刷新...</string>
    <string name="refreshview_header_hint_success">刷新成功</string>
    <string name="refreshview_header_hint_fail">刷新失败</string>

    <string name="refreshview_footer_hint_normal">加载更多</string>
    <string name="refreshview_footer_hint_ready">释放立即加载</string>
    <string name="refreshview_footer_hint_success">加载成功</string>
    <string name="refreshview_footer_hint_fail">加载失败</string>
    <string name="refreshview_footer_hint_complete">已无更多数据</string>
    <string name="refreshview_footer_hint_loading">正在加载...</string>
</resources>
