<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:background="@drawable/btn_r30_solid_gray"
        android:gravity="center"
        android:text="@string/skip" />

    <LinearLayout
        android:id="@+id/welcome_opera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="36dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/btn_r30_stroke_red"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/button_red_normal" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="32dp"
            android:layout_weight="1"
            android:background="@drawable/btn_r30_solid_red"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_opera"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/welcome_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/iv_light_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/light_dot" />
    </RelativeLayout>

</RelativeLayout>
